--- a/CosumoREST/Base.lproj/Main.storyboard
+++ b/CosumoREST/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sex-9e-Yaa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ffO-um-pV4">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
@@ -115,6 +115,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k60-Tg-xd4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1893.8931297709923" y="3.5211267605633805"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="5Fv-eR-h31">
+            <objects>
+                <viewController id="ffO-um-pV4" customClass="WebViewController" customModule="CosumoREST" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vib-rg-Zv2">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rva-Fp-Tgt">
+                                <rect key="frame" x="0.0" y="59" width="393" height="793"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="XP1-EE-syL"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rva-Fp-Tgt" firstAttribute="leading" secondItem="XP1-EE-syL" secondAttribute="leading" id="B4q-EJ-WBT"/>
+                            <constraint firstItem="rva-Fp-Tgt" firstAttribute="top" secondItem="XP1-EE-syL" secondAttribute="top" id="QGc-R9-TQw"/>
+                            <constraint firstItem="rva-Fp-Tgt" firstAttribute="trailing" secondItem="XP1-EE-syL" secondAttribute="trailing" id="UfD-lY-wPt"/>
+                            <constraint firstAttribute="bottom" secondItem="rva-Fp-Tgt" secondAttribute="bottom" id="iiH-SM-bBT"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="rva-Fp-Tgt" id="tFw-66-H9e"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bbh-CV-0P2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2994.6564885496182" y="-4.2253521126760569"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="cdH-JI-J40">
